<resources>
    <string name="app_name">CrediSafe</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_in">Sign In</string>
    <string name="national_id">00000000A00</string>
    <string name="pin">0000</string>
    <string name="login">Login</string>
    <string name="to_signup">Signup</string>
    <string name="signup">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="firstname">Gerald</string>
    <string name="surname">Sibanda</string>
    <string name="forenames">Mufaro Justice</string>
    <string name="dob">dd/mm/yyyy</string>
    <string name="gender_description">Male/Female</string>
    <string name="address">address</string>
    <string name="landline">landline</string>
    <string name="employer_name">Employer</string>
    <string name="email">Your Email</string>
    <string name="employer_email">Employer Email</string>
    <string name="spinner_identification_type">Nationalid / Passprt / ...</string>
    <string name="town">Town</string>
    <string name="district">District</string>
    <string name="next_of_kin">next of kin</string>
    <string name="next_of_kin_number">next_of_kin_number</string>
    <string name="next_of_kin_relationship">next of kin rel</string>
    <string name="phone_number">PhoneNumber</string>
    <string name="national_id_text">0000000A00</string>

    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="marital_status_list">
        <item>Single</item>
        <item>Maried</item>
        <item>Devoced</item>
    </string-array>
    <string-array name="identification_list">
        <item>National_Id</item>
        <item>PassPort</item>
        <item>...</item>
    </string-array>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="header_title">Heder Title</string>
    <string name="header_text">header text</string>

    <string-array name="navigation_drawer_items_array">
        <item>Connect</item>
        <item>Fixtures</item>

        <item>Table</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Menu</string>
    <string name="menu_loans">Gallery</string>
    <string name="menu_give_loan">SlideShow</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="useremail">hitmantalmud@gmail.com</string>
    <string name="name">Hitman T Sibanda</string>
    <string name="menu_logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="loansowing">Loan Owing</string>
    <string name="loansgiven">Loans Given</string>
    <string name="creditstatus">Credit Status</string>
    <string name="giveloan">Give Loan</string>
    <string name="onboard">Onboard Someone</string>
    <string name="home">Home</string>
    <string name="description">ahiyshksjcnsa casjlhdnkahx</string>
    <string name="title">Credit Status</string>
    <string name="secondary_text">low Risk</string>
    <string name="supporting_text">LML 244</string>
    <string name="lownsowincount">count : (0)</string>
    <string name="datetopayowinglown">09/09/23 : 19 :34:00</string>
    <string name="lownsgivencount">count : (2)</string>
    <string name="datetopaylowngiven">10/03/23 : 19:17:00</string>
    <string name="check">check</string>
    <string name="history">Transaction History</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_loan_owing">Loan Owing</string>
    <string name="menu_loan_given">Loan Given</string>
    <string name="more">More Info</string>

</resources>