<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:id="@+id/national_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/national_id_text"
                android:inputType="text"
                android:maxLength="11"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck">

            </EditText>

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/firstname"
                android:inputType="text"
                android:maxLength="11"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck">

            </EditText>

            <EditText
                android:id="@+id/forenames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/forenames"
                android:inputType="text"
                android:maxLength="11"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck">

            </EditText>

            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/dob"
                android:inputType="date"
                android:maxLength="11"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck">

            </EditText>

            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/gender_description"
                android:minHeight="48dp">

            </Spinner>

            <Spinner
                android:id="@+id/spinner_identification_type"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/spinner_identification_type"
                android:minHeight="48dp">

            </Spinner>

            <Spinner
                android:id="@+id/spinner_marital_status"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/gender_description"
                android:minHeight="48dp">

            </Spinner>


            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/surname"
                android:inputType="text"
                android:maxLength="11"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck">

            </EditText>

            <EditText
                android:id="@+id/pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/pin"
                android:inputType="text"
                android:maxLength="4"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck">

            </EditText>

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:autofillHints=""
                android:hint="@string/address"
                android:inputType="text"
                android:maxLength="40"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck">

            </TextView>

            <EditText
                android:id="@+id/landline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/landline"
                android:inputType="text"
                android:maxLength="40"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck">

            </EditText>

            <EditText
                android:id="@+id/employer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/employer_name"
                android:inputType="text"
                android:maxLength="40"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck">

            </EditText>


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck">

            </EditText>

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/phone_number"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck">

            </EditText>

            <EditText
                android:id="@+id/employer_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/employer_email"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck">

            </EditText>

            <EditText
                android:id="@+id/town"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/town"
                android:inputType="text"
                android:maxLength="40"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck">

            </EditText>

            <EditText
                android:id="@+id/district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/district"
                android:inputType="text"
                android:maxLength="40"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck">

            </EditText>

            <EditText
                android:id="@+id/next_of_kin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/next_of_kin"
                android:inputType="text"
                android:maxLength="40"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck">

            </EditText>

            <EditText
                android:id="@+id/next_of_kin_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/next_of_kin_number"
                android:inputType="text"
                android:maxLength="40"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck">

            </EditText>

            <EditText
                android:id="@+id/next_of_kin_relationship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/next_of_kin_relationship"
                android:inputType="text"
                android:maxLength="40"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck">

            </EditText>



            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup" />

            <Button
                android:id="@+id/to_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>