<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.credisafe.ui.home.HomeFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_loansowing"
        android:name="com.example.credisafe.ui.loanowing.LoanOwingFragment"
        android:label="@string/menu_loan_owing"
        tools:layout="@layout/fragment_loan_owing" />

    <fragment
        android:id="@+id/nav_given_loan"
        android:name="com.example.credisafe.ui.loansgiven.LoanGivenFragment"
        android:label="@string/menu_loan_given"
        tools:layout="@layout/fragment_loans_given" />
</navigation>